[package]
name = "swaytools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~4.0", features = ["derive"] }
dbus = "~0.9"
fork = "0.1.20"
itertools = "~0.10"
log = "0.4.17"
mpsc = "0.1.0"
notify = "5.0.0"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
simplelog = "0.12.0"
swayipc = "~3.0"
thiserror = "~1.0"
tinytemplate = "~1.2"
xkbregistry = "~0.1"
